# nebase

./: .gitattributes  .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  README.md  get_lines.rb  options.h.in
cmake/: CMakeLists.txt  NeBaseConfig.cmake.in  feature.cmake
cmake/CompileTests/: glog_strerr.c  glog_strerr.cmake  printf_strerr.c  printf_strerr.cmake  struct_initializer.c  struct_initializer.cmake
cmake/CrossCompiling/: README.md  clang.toolchain  gcc.multiarch.toolchain
cmake/Modules/: GetFromOSRelease.sh  NeBaseCompatLayer.cmake  NeBaseDetectLinker.cmake  NeBaseFeatures.cmake  NeBaseFindThreads.cmake  NeBaseImportXConfig.cmake  NeBaseInstallDirs.cmake  NeBaseLoadCCompiler.cmake  NeBaseLoadLinker.cmake  NeBaseLoadOSRelease.cmake  NeBaseSetup.cmake
compat/: CMakeLists.txt
compat/hash/: hash.h  obstack.h
compat/hashtable/: config.h  hash.h
compat/obstack/: config.h  handler.c  obstack.h
compat/rbtree/: nbtool_config.h
include/: CMakeLists.txt  options.h.in  platform.h.in  version.h.in
include/nebase/: cdefs.h  dispatch.h  endian.h  evdp.h  events.h  file.h  hash.h  hashtable.h  io.h  netinet.h  obstack.h  pidfile.h  pipe.h  plugin.h  proc.h  pty.h  random.h  rbtree.h  resolver.h  sem.h  semaphore.h  signal.h  sock.h  sysconf.h  syslog.h  thread.h  time.h
include/nebase/compat/net_radix/net/: radix.h
include/nebase/compat/os/darwin/: endian.h
include/nebase/compat/os/darwin/netinet6/: in6.h
include/nebase/compat/os/darwin/sys/: rbtree.h  socket.h
include/nebase/compat/os/dragonfly/arpa/: inet.h
include/nebase/compat/os/dragonfly/netinet/: icmp6.h
include/nebase/compat/os/dragonfly/sys/: cdefs.h  queue.h
include/nebase/compat/os/freebsd/: endian.h
include/nebase/compat/os/illumos/: fcntl.h
include/nebase/compat/os/solaris/: endian.h
include/nebase/evdp/: base.h  core.h  helper.h  io_base.h  io_common.h  io_socket.h  sys_timer.h  types.h
include/nebase/file/: copy.h  stat.h
include/nebase/net/: device.h  ipaddr.h  radix.h
include/nebase/sock/: common.h  csum.h  inet.h  raw.h  unix.h
include/nebase/stats/: proc.h  swap.h
include/nebase/str/: bm.h
src/: CMakeLists.txt  _init.c  _init.h  dispatch.c  events.c  file.c  io.c  netinet.c  pidfile.c  pipe.c  plugin.c  proc.c  pty.c  random.c  resolver.c  sem_posix.c  sem_sysv.c  semaphore.c  signal.c  sock.c  sock_dflybsd.c  sock_dflybsd.h  sock_freebsd.c  sock_freebsd.h  sock_linux.c  sock_linux.h  sock_netbsd.c  sock_netbsd.h  sock_openbsd.c  sock_openbsd.h  syslog.c  thread.c  time.c  version.c
src/aio/: linux_poll.h
src/dispatch/: aio_poll.h  core.c  timer.c  timer.h
src/evdp/: CMakeLists.txt  _aio_poll.c  _bsd_kevent.c  _linux_epoll.c  _sunos_port.c  core.c  core.h  helpers.c  io_base.c  io_base.h  io_common.c  io_common.h  io_socket.c  io_socket.h  sys_timer.c  sys_timer.h  timer.c  timer.h
src/evdp/driver/: CMakeLists.txt  aio_poll.c  aio_poll.h  event_port.c
src/evdp/driver/aio_poll/: queue.c  source_abstimer.c  source_fd_util.c  source_itimer.c  source_os_fd.c  source_ro_fd.c  types.h
src/evdp/driver/epoll/: queue.c  source_abstimer.c  source_fd_util.c  source_itimer.c  source_os_fd.c  source_ro_fd.c  types.h
src/evdp/driver/event_port/: CMakeLists.txt  queue.c  source_abstimer.c  source_fd_util.c  source_itimer.c  source_os_fd.c  source_os_fd.h  source_ro_fd.c  source_ro_fd.h  types.h
src/evdp/driver/io_uring/: CMakeLists.txt  helper.c  helper.h  queue.c  source_abstimer.c  source_itimer.c  source_os_fd.c  source_ro_fd.c  types.h
src/evdp/driver/kevent/: queue.c  source_abstimer.c  source_fd_util.c  source_itimer.c  source_os_fd.c  source_ro_fd.c  types.h
src/file/: CMakeLists.txt  copy.c  stat.c
src/init/: init.c  sock.h
src/net/: CMakeLists.txt  device.c  ipaddr.c  radix.c
src/sock/: CMakeLists.txt  _init.h  common.c  csum.c  dflybsd.c  dflybsd.h  freebsd.c  freebsd.h  illumos.h  inet.c  linux.h  netbsd.h  openbsd.c  openbsd.h  raw.c  solaris.c  solaris.h  sunos.c  unix.c  xnu.c  xnu.h
src/sock/platform/: CMakeLists.txt  dflybsd.c  dflybsd.h  freebsd.c  freebsd.h  illumos.c  illumos.h  linux.c  linux.h  netbsd.c  netbsd.h  openbsd.c  openbsd.h  solaris.c  solaris.h  xnu.c  xnu.h
src/stats/: CMakeLists.txt
src/stats/proc/: CMakeLists.txt  bsd_kvm.c  bsd_sysctl.c  linux_procfs.c  mach_task.c  sunos_procfs.c
src/stats/swap/: CMakeLists.txt  bsd_kvm.c  bsd_swapctl.c  darwin_sysctl.c  linux_procfs.c  sunos_swapctl.c
src/str/: CMakeLists.txt  bm.c
test/: CMakeLists.txt  TODO
test/dispatch/: CMakeLists.txt  test_destroy_clean.c  test_pipe_read_close.c  test_timer_del_more.c  test_timer_del_self.c
test/evdp/: CMakeLists.txt  test_destroy_clean.c  test_itimer_overrun.c  test_osfd_socketpair_wr_then_rd.c  test_pipe_read_close.c  test_rofd_pipe_read_close.c  test_timer_del_more.c  test_timer_del_self.c  test_timer_reset_in_callback.c
test/file/: CMakeLists.txt  test_dirfd_permission.c
test/io/: CMakeLists.txt  test_pty_send_sigint.c  test_redirect_to_null.c
test/log/: CMakeLists.txt  test_log_file.c  test_log_glog_file.c  test_log_stdio.c  test_log_stdio_debug.c  test_log_stdio_perror.c
test/netinet/: CMakeLists.txt  test_addr_to_arpa.c  test_net4_pton.c  test_net4_radix.c  test_net6_pton.c  test_net6_radix.c  test_prefix_to_netmask.c
test/pidfile/: CMakeLists.txt  test_pidfile_daemon.c
test/pty/: CMakeLists.txt  test_send_sigint.c
test/resolver/: CMakeLists.txt  test_addr_to_arpa.c
test/sem/: CMakeLists.txt  test_proc_one_same_user.c  test_proc_private_fork.c  test_proc_wait_removed.c
test/signal/: CMakeLists.txt  test_proc_block_chld.c  test_quit_event.c
test/sock/: CMakeLists.txt  test_raw4_ping_localhost.c  test_raw6_ping_localhost.c  test_seqpacket_exact.c  test_socketpair_close.c  test_socketpair_cred.c  test_socketpair_pipefd.c  test_unix_bind_check.c  test_unix_connect_cmsg.c  test_unix_connect_cred.c  test_unix_dgram_cmsg.c  test_unix_dgram_cred.c
test/thread/: CMakeLists.txt  test_create.c  test_id.c  test_running.c
test/time/: CMakeLists.txt  test_boot.c  test_daytime_abs.c  test_up.c
util/: CMakeLists.txt
(+43 files in other folders)
