
set(MODULES_INSTALL_PATH "${CMAKE_INSTALL_FULL_DATAROOTDIR}/${PROJECT_NAME}/Modules")
install(DIRECTORY Modules/ DESTINATION "${MODULES_INSTALL_PATH}")

set(INCLUDE_INSTALL_PATH "${CMAKE_INSTALL_FULL_INCLUDEDIR}")
set(LIBRARY_INSTALL_PATH "${CMAKE_INSTALL_FULL_LIBDIR}")

include(CMakePackageConfigHelpers)

configure_package_config_file(NeBaseConfig.cmake.in NeBaseConfig.cmake
  INSTALL_DESTINATION "${CMAKE_INSTALL_FULL_DATAROOTDIR}/${PROJECT_NAME}/cmake"
  PATH_VARS MODULES_INSTALL_PATH INCLUDE_INSTALL_PATH LIBRARY_INSTALL_PATH
)
write_basic_package_version_file(NeBaseConfigVersion.cmake
  COMPATIBILITY AnyNewerVersion
)
install(FILES
  ${CMAKE_CURRENT_BINARY_DIR}/NeBaseConfig.cmake
  ${CMAKE_CURRENT_BINARY_DIR}/NeBaseConfigVersion.cmake
  DESTINATION "${CMAKE_INSTALL_FULL_DATAROOTDIR}/${PROJECT_NAME}/cmake"
)
