
add_subdirectory(log)
add_subdirectory(time)
add_subdirectory(sem)
add_subdirectory(thread)
add_subdirectory(sock)
add_subdirectory(signal)
add_subdirectory(evdp)
add_subdirectory(pidfile)
add_subdirectory(io)
add_subdirectory(file)
add_subdirectory(netinet)

if(WITH_CARES)
  add_subdirectory(resolver)
endif(WITH_CARES)
