
add_executable(evdp_test_destroy_clean test_destroy_clean.c)
target_link_libraries(evdp_test_destroy_clean $<TARGET_NAME:nebase>)
add_test(NAME evdp_test_destroy_clean COMMAND $<TARGET_NAME:evdp_test_destroy_clean>)

add_executable(evdp_test_itimer_overrun test_itimer_overrun.c)
target_link_libraries(evdp_test_itimer_overrun $<TARGET_NAME:nebase>)
add_test(NAME evdp_test_itimer_overrun COMMAND $<TARGET_NAME:evdp_test_itimer_overrun>)

add_executable(evdp_test_rofd_pipe_read_close test_rofd_pipe_read_close.c)
target_link_libraries(evdp_test_rofd_pipe_read_close $<TARGET_NAME:nebase>)
add_test(NAME evdp_test_rofd_pipe_read_close COMMAND $<TARGET_NAME:evdp_test_rofd_pipe_read_close>)

add_executable(evdp_test_timer_del_self test_timer_del_self.c)
target_link_libraries(evdp_test_timer_del_self $<TARGET_NAME:nebase>)
add_test(NAME evdp_test_timer_del_self COMMAND $<TARGET_NAME:evdp_test_timer_del_self>)

add_executable(evdp_test_timer_del_more test_timer_del_more.c)
target_link_libraries(evdp_test_timer_del_more $<TARGET_NAME:nebase>)
add_test(NAME evdp_test_timer_del_more COMMAND $<TARGET_NAME:evdp_test_timer_del_more>)

add_executable(evdp_test_timer_reset_in_callback test_timer_reset_in_callback.c)
target_link_libraries(evdp_test_timer_reset_in_callback $<TARGET_NAME:nebase>)
add_test(NAME evdp_test_timer_reset_in_callback COMMAND $<TARGET_NAME:evdp_test_timer_reset_in_callback>)

add_executable(evdp_test_osfd_socketpair_wr_then_rd test_osfd_socketpair_wr_then_rd.c)
target_link_libraries(evdp_test_osfd_socketpair_wr_then_rd $<TARGET_NAME:nebase>)
add_test(NAME evdp_test_osfd_socketpair_wr_then_rd COMMAND $<TARGET_NAME:evdp_test_osfd_socketpair_wr_then_rd>)
