
if(USE_IO_URING)
  add_subdirectory(io_uring)
elseif(USE_AIO_POLL)
  add_subdirectory(aio_poll)
elseif(OS_LINUX)
  add_subdirectory(epoll)
elseif(OSTYPE_BSD OR OS_DARWIN)
  add_subdirectory(kevent)
elseif(OSTYPE_SUN)
  add_subdirectory(event_port)
else()
  message(SEND_ERROR "evdp is not supported on this platform")
endif()
